crates/cyrs-hir/src/snapshots/cyrs_hir__lower__tests__expr_literal_bool.snap
---
source: crates/cyrs-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 1
bindings: 0
nodes_in_map: 1
clause[0]: Return(distinct=false, items=1)
