crates/cyrs-hir/src/snapshots/cyrs_hir__lower__tests__optional_match.snap
---
source: crates/cyrs-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 2
bindings: 1
nodes_in_map: 3
clause[0]: OptionalMatch
clause[1]: Return(distinct=false, items=1)
binding: a (Node)
