crates/cyrs-hir/src/snapshots/cyrs_hir__lower__tests__pattern_anonymous_node.snap
---
source: crates/cyrs-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 2
bindings: 0
nodes_in_map: 3
clause[0]: Match
clause[1]: Return(distinct=false, items=1)
