crates/cyrs-hir/src/snapshots/cyrs_hir__lower__tests__pattern_rel_undirected.snap
---
source: crates/cyrs-hir/src/lower.rs
expression: render(&stmt)
---
clauses: 2
bindings: 3
nodes_in_map: 5
clause[0]: Match
clause[1]: Return(distinct=false, items=2)
binding: a (Node)
binding: r (Relationship)
binding: b (Node)
